# genproto/services/token/api/token-service.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "services/token/api/token-service.proto",
+    "title": "token/api/token-service.proto",
     "version": "version not set"
   },
   "consumes": [
@@ -10,7 +10,136 @@
   "produces": [
     "application/json"
   ],
-  "paths": {},
+  "paths": {
+    "/v1/token/check": {
+      "post": {
+        "operationId": "TokenService_CheckToken",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/tokenCheckTokenResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/tokenCheckTokenRequest"
+            }
+          }
+        ],
+        "tags": [
+          "TokenService"
+        ]
+      }
+    },
+    "/v1/token/delete": {
+      "post": {
+        "operationId": "TokenService_DeleteToken",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/tokenRemoveTokenResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/tokenRemoveTokenRequest"
+            }
+          }
+        ],
+        "tags": [
+          "TokenService"
+        ]
+      }
+    },
+    "/v1/token/generate": {
+      "post": {
+        "operationId": "TokenService_GenerateToken",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/tokenGenerateTokenResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/tokenGenerateTokenRequest"
+            }
+          }
+        ],
+        "tags": [
+          "TokenService"
+        ]
+      }
+    },
+    "/v1/token/refresh": {
+      "post": {
+        "operationId": "TokenService_RefreshToken",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/tokenRefreshTokenResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/tokenRefreshTokenRequest"
+            }
+          }
+        ],
+        "tags": [
+          "TokenService"
+        ]
+      }
+    }
+  },
   "definitions": {
     "protobufAny": {
       "type": "object",
@@ -45,6 +174,14 @@
         }
       }
     },
+    "tokenCheckTokenRequest": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "$ref": "#/definitions/tokenToken"
+        }
+      }
+    },
     "tokenCheckTokenResponse": {
       "type": "object",
       "properties": {
@@ -56,6 +193,14 @@
         }
       }
     },
+    "tokenGenerateTokenRequest": {
+      "type": "object",
+      "properties": {
+        "ssh_pub_key": {
+          "type": "string"
+        }
+      }
+    },
     "tokenGenerateTokenResponse": {
       "type": "object",
       "properties": {
@@ -64,11 +209,29 @@
         }
       }
     },
+    "tokenRefreshTokenRequest": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string",
+          "format": "byte"
+        }
+      }
+    },
     "tokenRefreshTokenResponse": {
       "type": "object",
       "properties": {
         "token": {
           "$ref": "#/definitions/tokenToken"
+        }
+      }
+    },
+    "tokenRemoveTokenRequest": {
+      "type": "object",
+      "properties": {
+        "ssh_key": {
+          "type": "string",
+          "format": "byte"
         }
       }
     },
