# services/token/internal/server/token.go
@@ -3,13 +3,67 @@ package server
 import (
 	"context"
 	"net"
+	"net/http"
+	"path/filepath"
+	"strings"
 	"sync"
 
 	token "github.com/de1phin/iam/genproto/services/token/api"
 	"github.com/de1phin/iam/pkg/logger"
+	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
+	"github.com/swaggo/http-swagger"
 	"go.uber.org/zap"
 	"google.golang.org/grpc"
+	"google.golang.org/grpc/reflection"
 )
+
+func InitTokenSwagger(ctx context.Context, wg *sync.WaitGroup, host string) {
+	httpMux := http.NewServeMux()
+
+	relativePath := "/Users/ivakhomyakov/labs/iam/genproto/services/token/api/token-service.swagger.json"
+	absolutePath, _ := filepath.Abs(relativePath)
+
+	httpMux.HandleFunc("/swagger.json", func(w http.ResponseWriter, r *http.Request) {
+		http.ServeFile(w, r, absolutePath)
+	})
+
+	httpMux.HandleFunc("/swagger/", httpSwagger.Handler(
+		httpSwagger.URL("http://localhost:8082/swagger.json"),
+	))
+
+	grpcMux := runtime.NewServeMux()
+	if err := token.RegisterTokenServiceHandlerFromEndpoint(ctx, grpcMux, ":8080", []grpc.DialOption{grpc.WithInsecure()}); err != nil {
+		logger.Error("failed to register gateway handler", zap.Error(err))
+	}
+
+	wg.Add(1)
+	go func() {
+		defer wg.Done()
+
+		srv := &http.Server{
+			Addr: ":8082",
+			Handler: http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+				if strings.HasPrefix(r.URL.Path, "/swagger") {
+					httpMux.ServeHTTP(w, r)
+					return
+				}
+				grpcMux.ServeHTTP(w, r)
+			}),
+		}
+
+		logger.Info("swagger for token-service start")
+		go func() {
+			if err := srv.ListenAndServe(); err != nil {
+				logger.Error("swagger for token-service", zap.Error(err))
+			}
+		}()
+
+		<-ctx.Done()
+		_ = srv.Shutdown(ctx)
+
+		logger.Info("swagger for token-service stop")
+	}()
+}
 
 func StartTokenService(ctx context.Context, serv token.TokenServiceServer, wg *sync.WaitGroup, host string) {
 	listener, err := net.Listen("tcp", host)
@@ -18,7 +72,9 @@ func StartTokenService(ctx context.Context, serv token.TokenServiceServer, wg *s
 	}
 	server := grpc.NewServer()
 	token.RegisterTokenServiceServer(server, serv)
+	reflection.Register(server)
 
+	wg.Add(1)
 	go func() {
 		logger.Info("token-service start")
 		defer wg.Done()
